--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,21 +5,17 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
+<ui:composition template="/WEB-INF/head.xhtml"
+    xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://primefaces.org/ui">
- 
-     <h:head>
- 
-     </h:head>
- 
-     <h:body>
- 
-         <p:commandButton value="Este botón nos va a llevar a la otra pagina jeje"/>                 
-         <h1>
-             Este es un titulo aaaaaaaa y solo es una prueba para subir a git jeje
-         </h1>
- 
-     </h:body>
-</html>
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:ui="http://java.sun.com/jsf/facelets">
+    
+    <ui:define name="content">
+         <p:growl id="mensajes" showDetail="true"/>
+         <p:commandButton value="Este botón nos va a llevar a la otra pagina jeje" action="#{indexController.llevarPaginaSecundaria()}"/>            
+         
+         <p:commandButton value="solo para imprimir al" actionListener="#{indexController.imprimir()}" update="mensajes"/>
+    </ui:define>
+</ui:composition>
