--- a/src/main/webapp/rutas/paginaSecundaria.xhtml
+++ b/src/main/webapp/rutas/paginaSecundaria.xhtml
@@ -8,15 +8,16 @@ and open the template in the editor.
 <html xmlns="http://www.w3.org/1999/xhtml"
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:f="http://java.sun.com/jsf/core"
-    xmlns:p="http://primefaces.org/ui"> 
-    <p:commandButton>
-        Hellow
-    </p:commandButton>
-    <head>
-        <title>TODO supply a title</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+    xmlns:p="http://primefaces.org/ui">
+ 
+     <h:head>
+ 
+     </h:head>
+     <h:body>
+         <h:form>
+         <p:commandButton value="Esto nos debe e regresa a la primer pagina" action="#{paginaSecundariaController.regresar()}"/>            
+         
+         <p:commandButton value="solo para imprimir algo"  actionListener="#{paginaSecundariaController.imprimirAlgo()}"/>
+         </h:form>
+     </h:body>
 </html>
